--- a/values.yml
+++ b/values.yml
@@ -1,3 +1,3 @@
 myRepo:
-  gitProvider: my_github
+  gitProvider: jfrog_pipelines_simple_example_github
   path: Aryamanz29/jfrog-pipelines-simple-example
